--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@vue/runtime-dom": "^3.3.9",
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
-    "react-icons": "^4.11.0",
-    "react-router-dom": "^6.17.0"
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.17.0",
+    "vite-plugin-vue": "^0.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
