--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vue/runtime-dom": "^3.3.9",
     "aos": "^2.3.4",
     "axios": "^1.5.1",
+    "preline": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
