--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-feather": "^2.0.10",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.17.0",
+    "swiper": "^11.0.5",
     "taos": "^1.0.5",
     "vite-plugin-vue": "^0.0.1"
   },
