--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@nextui-org/react": "^2.2.9",
     "@vue/runtime-dom": "^3.3.9",
     "aos": "^2.3.4",
     "axios": "^1.5.1",
+    "framer-motion": "^11.0.3",
     "preline": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.17.0",
+    "react-type-animation": "^3.2.0",
     "swiper": "^11.0.5",
     "taos": "^1.0.5",
     "vite-plugin-vue": "^0.0.1"
