fixing slides-project

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aos": "^2.3.4",
     "axios": "^1.5.1",
     "framer-motion": "^11.0.3",
+    "gsap": "^3.12.5",
     "preline": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
