--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.17.0",
     "react-type-animation": "^3.2.0",
+    "sonner": "^1.4.0",
     "swiper": "^11.0.5",
     "taos": "^1.0.5",
     "vite-plugin-vue": "^0.0.1"
